{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "ShipControls",
            "id": "16734bdb-60e4-470e-b111-78c9c6f0a623",
            "actions": [
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "ef06ac6b-cae4-4bdc-9833-189430f82fb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "d5368bdc-cc0f-4863-809b-40a8c988bf71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseMove",
                    "type": "PassThrough",
                    "id": "7d9bdea7-ad38-4c78-ae48-2f17f3b4f588",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "d741cb93-825f-49d3-9110-5bdb66e6dfed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoForward",
                    "type": "Button",
                    "id": "401583b9-8f11-4a70-8cde-acbba57cf161",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoBackward",
                    "type": "Button",
                    "id": "4ff23643-0258-4cdb-8468-80f30b1308b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FireWeapons",
                    "type": "Button",
                    "id": "eb933cb8-9b6c-4c86-aef6-79b517835693",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56ae9710-b052-4279-92e3-ce55e4a9af8b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dffd9801-d331-4f8a-8d3a-6d2940ad526e",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a49d88db-b794-456b-95d6-520fbc9db7f3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e715a039-c45a-46f8-b398-52189b0d680f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "403c15f3-446c-4a72-98fd-ba943ae01338",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b95fce5-bd38-441c-b016-dfd979084665",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "795d9389-931e-460e-bc56-7be6b8af15b0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireWeapons",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}